# duckdb-server-rust

./: .gitignore  Cargo.toml  Dockerfile  Readme.md  build.rs  cloudbuild.yaml
.github/workflows/: ci.yml  pr.yml  tag-release.yml  version-bump.yml
benches/: benchmark.rs
src/: app.rs  auth.rs  bundle.rs  cache.rs  constants.rs  db.rs  flight.rs  grpc_health.rs  hostname.rs  interfaces.rs  lib.rs  main.rs  query.rs  sanitize.rs  sql.rs  state.rs  test.rs
src/db/: config.rs  instance_cache.rs  mod.rs  monitoring.rs  pool.rs  queries.rs  traits.rs
src/interfaces/: cli.rs  config.rs  db.rs  error.rs  mod.rs  query.rs
