[package]
name = "duckdb-server"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/luabase/duckdb-server-rust"
description = "Definite DuckDB Server"

[dependencies]
anyhow = "1.0"
arrow = "54.3"
arrow-flight = { version = "54.3", features = ["flight-sql-experimental"] }
arrow-json = "54.3"
arrow-array = { version = "54.3", features = ["chrono-tz"] }
arrow-ipc = "54.3"
async-stream = "0.3"
async-trait = "0.1"
chrono = "0.4.40"
axum = { version = "0.8", features = ["http1", "http2", "ws", "json", "tokio", "tracing", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7"
clap = { version = "4.5", features = ["derive"] }
duckdb = { version = "1.2", features = ["modern-full"] }
futures = "0.3"
futures-util = "0.3"
glob = "0.3"
hostname = "0.4"
listenfd = "1.0"
lru = "0.14"
prost = "0.13"
prost-types = "0.13"
r2d2 = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[build-dependencies]
cc = "1.0"
tonic-build = "0.12.3"

[dev-dependencies]
criterion = {version = "0.5", features=["async_futures", "html_reports"]}
http-body-util = "0.1"
temp_testdir = "0.2"

[profile.release]
codegen-units = 1
