[package]
name = "duckdb-server"
version = "1.3.0"
edition = "2024"
repository = "https://github.com/luabase/duckdb-server-rust"
description = "Definite DuckDB Server"

[dependencies]
anyhow = "1.0"
arrow = "56"
arrow-flight = { version = "56", features = ["flight-sql-experimental"] }
arrow-json = "56"
arrow-array = { version = "56", features = ["chrono-tz"] }
arrow-ipc = "56"
async-stream = "0.3"
async-trait = "0.1"
chrono = "0.4.40"
axum = { version = "0.8", features = ["http1", "http2", "ws", "json", "tokio", "tracing", "macros"] }
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum-server-dual-protocol = "0.7"
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
duckdb = { version = "1.4", features = ["bundled", "modern-full"] }
futures = "0.3"
futures-util = "0.3"
git-version = "0.3"
glob = "0.3"
hostname = "0.4"
listenfd = "1.0"
lru = "0.16"
libc = "0.2"
once_cell = "1"
parking_lot = "0.12"
prost = "0.14"
prost-types = "0.14"
r2d2 = "0.8"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
subtle = "2.5"
sqlparser = "0.59"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = "0.7"
tonic = "0.13"
tonic-health = "0.13"
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors", "compression-full", "set-header", "timeout", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
cc = "1.0"
tonic-build = "0.13"

[dev-dependencies]
criterion = {version = "0.7", features=["async_futures", "html_reports"]}
http-body-util = "0.1"
temp_testdir = "0.2"

[profile.release]
codegen-units = 1
